[BUILD-C1] spotbugs: fix mechanical findings (charset, final, primitive parse)
Fixed SpotBugs High-priority findings that are mechanically addressable:
- DM_DEFAULT_ENCODING (39→0): added StandardCharsets.UTF_8 to
  String/Reader/Writer/getBytes() sites across 18 source files
  (Util, Walker, Vba, SimpleCharStream, SegmentLoader,
  UrlRepositoryContentFinder, FilterDynamicSchemaProcessor, CmdRunner,
  MockHttpServletRequest, XmlUtil, XmlaSupport, Base64, PrimeFinder,
  PropertyUtil, ServiceDiscovery, DomBuilder, XmlaHandler,
  JsonSaxWriter, DefaultSaxWriter, RolapMemberBase, RolapStar.Test)
- MS_SHOULD_BE_FINAL (2→0): added `final` to non-reassigned public static
  fields RolapStar.ColumnComparator.instance and SqlStatement.DrillThroughResults
- DM_BOXED_PRIMITIVE_FOR_PARSING (5→0): replaced Integer.valueOf("x")/
  new Double(s)/new Integer(s) with parseInt/parseDouble in CastFunDef,
  Vba, MdxParserImpl, MdxParser.jj, RolapCube, RowsetDefinition
- DM_BOXED_PRIMITIVE_FOR_COMPARE (2→0): replaced Integer.valueOf().compareTo()
  with Integer.compare() in Aggregation and DefaultRecognizer;
  fixed MonetDbDialect as well

Applied via OpenRewrite ExplicitCharsetOnStringGetBytes and
PrimitiveWrapperClassConstructorToValueOf where they had coverage;
manual fixes for the remaining 30+ sites.

Verified: mvn compile BUILD SUCCESS, unit tests match baseline
(423 total, 2 failures, 5 errors — all pre-existing).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>